--- a/src/main/res/layout/activity_main.xml
+++ b/src/main/res/layout/activity_main.xml
@@ -9,4 +9,9 @@
         android:layout_height="wrap_content"
         android:text="Get请求"/>
 
+    <Button
+        android:id="@+id/head"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Head请求"/>
 </LinearLayout>
